knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Insurance_Plan__c/Insurance_Plan__c.object-meta.xml
<CustomObject>
    <label>Insurance Plan</label>
    <nameField>
        <label>Insurance Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>