knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Insurance_Plan__c/fields/Address_LN_1__c.field-meta.xml
<CustomField>
    <fullName>Address_LN_1__c</fullName>
    <label>Address LN 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>