knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Insurance_Plan__c/fields/Analytical_Level__c.field-meta.xml
<CustomField>
    <fullName>Analytical_Level__c</fullName>
    <label>Analytical Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>