knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Insurance_Plan__c/fields/Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company__c</fullName>
    <label>Billing Company</label>
    <length>25</length>
    <type>Text</type>
</CustomField>