knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Insurance_Plan__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Plans</relationshipLabel>
    <relationshipName>Insurance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>