knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Insurance_Plan__c/fields/External_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Source_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Source ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>