knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Insurance_Plan__c/fields/Legacy_Corp_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Corp_Id__c</fullName>
    <label>Legacy Corp Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>