knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Insurance_Plan__c/fields/Mnemonic__c.field-meta.xml
<CustomField>
    <fullName>Mnemonic__c</fullName>
    <label>Mnemonic</label>
    <length>40</length>
    <type>Text</type>
</CustomField>